homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1

  selector:
    matchLabels:
      app: homeassistant

  template:
    metadata:
      labels:
        app: homeassistant

    spec:
      containers:
      - name: homeassistant

        image: ghcr.io/home-assistant/home-assistant:stable

        ports:
        - containerPort: 8123

        volumeMounts:
        - mountPath: /config
          name: config

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: homeassistant-pvc
