homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant

spec:
  ingressClassName: traefik

  rules:
  - host: ha.yashbhangale.site

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: homeassistant
            port:
              number: 8123
